examples/test/testpolicy5381.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5381
  namespace: namespace407
spec:
  podSelector:
    matchLabels:
      key45: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value10
          key41: value12
      podSelector:
        matchLabels:
          key40: value6
          key22: value3
